--- a/code/static/display.css
+++ b/code/static/display.css
@@ -65,31 +65,22 @@
     border: 0;
     background-color: #ffffff;
 }
-.children.tablet,.children.face {
-    flex-flow: row nowrap;
-}
-.children.column {
-    align-items: stretch;
+.children.document {
     flex-flow: column nowrap;
 }
-.children.line,.children.case {
-    align-items: stretch;
-    flex-flow: row nowrap;
-}
-.children.caseh,.children.trminalh {
-    flex-flow: row nowrap;
-}
-.children.casev,.children.trminalv {
+.children.face {
     flex-flow: column nowrap;
 }
-.children.trminal {
+.children.line {
+    align-items: stretch;
     flex-flow: row nowrap;
 }
 .children.cluster {
     flex-flow: row wrap;
 }
-.children.quad {
-    flex-flow: row wrap;
+.children.line {
+    align-items: stretch;
+    flex-flow: row nowrap;
 }
 .children.sign {
     flex-flow: column nowrap;
@@ -97,11 +88,11 @@
 .contnr {
     width: fit-content;
 }
-.contnr.tablet,.contnr.face,.contnr.column,
-.contnr.line,.contnr.case,.contnr.trminal,
-.contnr.comment,
+.contnr.document,.contnr.face,
+.contnr.line,
 .contnr.cluster,
-.contnr.quad,.contnr.sign {
+.contnr.word,
+.contnr.sign {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -115,85 +106,68 @@
     border-width: 0.2em;
     font-size: small;
 }
-.contnr.tablet,.contnr.face,.contnr.column {
+.contnr.document,.contnr.face {
     border-color: #bb8800;
 }
-.contnr.line,.contnr.case,.contnr.trminal {
+.contnr.line {
     border-color: #0088bb;
 }
 .contnr.cluster {
     flex-flow: row wrap;
     border: 0;
 }
-.contnr.sign,.contnr.quad {
-    border-color: #bbbbbb;
+.contnr.word {
+    border-color: #44bbff;
 }
-.contnr.comment {
-    background-color: #ffddaa;
-    border: 0.2em solid #eecc99;
-    border-radius: 0.3em;
+.contnr.sign {
+    border-color: #bbbbbb;
 }
 .contnr.hl {
     background-color: #ffee66;
 }
-.lbl.tablet,.lbl.face,.lbl.column,
-.lbl.line,.lbl.case,.lbl.trminal,
-.lbl.comment,
+.lbl.document,.lbl.face,
+.lbl.line,
 .lbl.cluster,
-.lbl.quad,.lbl.sign {
+.lbl.sign,.lbl.word {
     margin-top: -1.2em;
     margin-left: 1em;
     background: #ffffff none repeat scroll 0 0;
     padding: 0 0.3em;
     border-style: solid;
     font-size: small;
-    color: #0000cc;
     display: block;
 }
-.lbl.tablet,.lbl.face,.lbl.column {
+.lbl.document,.lbl.face {
     border-color: #bb8800;
-    border-width: 0.2em;
-    border-radius: 0.2em;
+    border-width: 0.3em;
+    border-radius: 0.3em;
     color: #bb8800;
 }
-.lbl.line,.lbl.case,.lbl.trminal {
+.lbl.line {
     border-color: #0088bb;
-    border-width: 0.2em;
-    border-radius: 0.2em;
+    border-width: 0.3em;
+    border-radius: 0.3em;
     color: #0088bb;
 }
-.lbl.comment {
-    border-color: #eecc99;
+.lbl.cluster {
+    border-color: #dddddd;
     border-width: 0.2em;
     border-radius: 0.2em;
-    color: #eecc99;
-    background-color: #ffddaa none repeat scroll 0 0;
+    color: #0000cc;
 }
-.lbl.clusterb,.lbl.clustere {
-    padding:  0.5em 0.1em 0.1em 0.1em;
-    margin: 0.8em 0.1em 0.1em 0.1em;
-    color: #888844;
-    font-size: x-small;
+.lbl.word {
+    border-color: #44bbff;
+    border-width: 0.2em;
+    border-radius: 0.2em;
+    font-size: medium;
+    color: #000000;
 }
-.lbl.clusterb {
-    border-left: 0.3em solid #cccc99;
-    border-right: 0;
-    border-top: 0;
-    border-bottom: 0;
-    border-radius: 1em;
-}
-.lbl.clustere {
-    border-left: 0;
-    border-right: 0.3em solid #cccc99;
-    border-top: 0;
-    border-bottom: 0;
-    border-radius: 1em;
-}
-.lbl.quad,.lbl.sign {
+.lbl.sign {
     border-color: #bbbbbb;
     border-width: 0.1em;
     border-radius: 0.1em;
-    color: #bbbbbb;
+    font-size: small;
+    color: #aaaaaa;
 }
 .op {
     padding:  0.5em 0.1em 0.1em 0.1em;
@@ -212,12 +186,6 @@
     font-size: medium;
     font-weight: bold;
     color: #0000bb;
-}
-.excavation {
-    font-family: monospace;
-    font-size: medium;
-    font-style: italic;
-    color: #779900;
 }
 .text {
     font-family: sans-serif;
