--- a/code/static/display.css
+++ b/code/static/display.css
@@ -1,3 +1,23 @@
+.txtn,.txtn a:visited,.txtn a:link {
+    font-family: sans-serif;
+    font-size: normal;
+    text-decoration: none;
+}
+.txtp,.txtp a:visited,.txtp a:link {
+    font-family: monospace;
+    font-size: normal;
+    text-decoration: none;
+}
+.txtr,.txtr a:visited,.txtr a:link {
+    font-family: serif;
+    font-size: large;
+    text-decoration: none;
+}
+.txtu,.txtu a:visited,.txtu a:link {
+    font-family: Santakku;
+    font-size: x-large;
+    text-decoration: none;
+}
 .features {
     font-family: monospace;
     font-size: medium;
@@ -211,13 +231,6 @@
     color: #ff77ff;
     font-size: large;
 }
-.r {
-    font-family: Santakku;
-}
-.g {
-    font-family: Santakku;
-}
-
 /* LANGUAGE: superscript and subscript */
 
 /* cluster */
