images, sign style

--- a/code/static/display.css
+++ b/code/static/display.css
@@ -187,7 +187,7 @@
     border-width: 0.1em;
     border-radius: 0.1em;
     font-size: small;
-    color: #aaaaaa;
+    color: #000000;
 }
 .op {
     padding:  0.5em 0.1em 0.1em 0.1em;
