--- a/code/static/display.css
+++ b/code/static/display.css
@@ -98,7 +98,7 @@
 .children.cluster {
     flex-flow: row wrap;
 }
-.children.line {
+.children.word {
     align-items: stretch;
     flex-flow: row nowrap;
 }
